modul option for permanent css loading. for devs: to moduls you can add now css files which will be loaded permanently. see headerfix.js for an example. you just need to add CSS,CSS_SIMPLE (or *_RTL for special RTL css's). if the model is enabled one of those css is loaded. if there is only a CSS, its loaded always. if there is a CSS and a CSS_Simple they are loaded only for their skins. in contrast to loading css into header there is no flickering. however, make sure your css don't break other pages designs, as they don't run on registered pages only, but on all pages!
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@1906 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/headerfix.css
+++ b/content/resources/css/headerfix.css
@@ -26,7 +26,7 @@ margin-left:10px !important;
 /* add whitespace below header */
 #hattrick #menu,
 #hattrickNoSupporter #menu {
-margin-bottom: 6px;
+margin-bottom: 6px !important;
 }
 
 /* compensate for fixed header */
@@ -38,20 +38,20 @@ padding-top: 100px !important;
 /* fix left submenu */
 #hattrick #content .subMenu,
 #hattrickNoSupporter #content .subMenu {
-position: fixed;
+position: fixed !important;
 /* getting borders right if menu overflows content */
-background: white;
-margin-left: -11px; 
-padding-left: 11px;
-border-color: #DDDDDD;
-border-style: solid ;
-border-width:  0 0 0 1px;
+background: white !important;
+margin-left: -11px !important; 
+padding-left: 11px !important;
+border-color: #DDDDDD !important;
+border-style: solid !important;
+border-width:  0 0 0 1px !important;
 }
 
 /* compensate for fixed left submenu */
 #hattrick #content #mainWrapper,
 #hattrickNoSupporter #content #mainWrapper {
-margin-left: 135px;
+margin-left: 135px !important;
 min-height: 630px !important; /* temporary height hack before sticky footer */
 }
 
