--- a/content/resources/css/headerfix_rtl.css
+++ b/content/resources/css/headerfix_rtl.css
@@ -27,7 +27,7 @@ margin-left:10px !important;
 /* add whitespace below header */
 #hattrick #menu,
 #hattrickNoSupporter #menu {
-margin-bottom: 6px;
+margin-bottom: 6px !important;
 }
 
 /* compensate for fixed header */
@@ -42,22 +42,22 @@ padding-top: 100px !important;
 position: fixed;
 /* getting borders right if menu overflows content */
 background: white;
-margin-right: -11px; 
-padding-right: 11px;
-border-color: #DDDDDD;
-border-style: solid ;
-border-width:  0 1px 0 0;
+margin-right: -11px !important; 
+padding-right: 11px !important;
+border-color: #DDDDDD !important;
+border-style: solid !important;
+border-width:  0 1px 0 0 !important;
 }
 
 /* compensate for fixed left submenu */
 #hattrick #content #mainWrapper,
 #hattrickNoSupporter #content #mainWrapper {
-margin-right: 135px;
+margin-right: 135px !important;
 min-height: 630px !important; /* temporary height hack before sticky footer */
 }
 
 div#shortcuts {
-padding-right: 10px;
+padding-right: 10px !important;
 }
 
 /* fix for forumbookmark z-index 99999 */
